--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -2,36 +2,36 @@
 <p>
 <a ng-click="newProjectCollapsed = !newProjectCollapsed">Create New Project</a>
 </p>
-<div collapse="!newProjectCollapsed">
+<div collapse="newProjectCollapsed">
 	<form class="well form-inline">
 	<input type="text" ng-model="projectName" placeholder="Project Name"/>
-	<button type="submit" class="btn" ng-click="addProject()"><i class="icon-plus"></i>Add Project</button>
+	<button type="submit" class="btn" ng-click="addProject(); newProjectCollapsed = true"><i class="icon-plus"></i>Add Project</button>
 	</form>
 </div>
-<form class="control-bar form-inline">
-<button class="btn" ng-click="removeProject()"><i class="icon-remove"></i>Remove Projects</button>
-</form>
-<div listview search="queryProjectsForUser()" items="projects" visible-items="visibleProjects" select="">
-<hr />
-<div ng-repeat="project in visibleProjects" class="details-row">
-	<ul class="inline" ng-class="{active: isSelected(project)}">
-		<li><input type="checkbox" ng-checked="isSelected(project)" ng-click="updateSelection($event, project)" /></li>
-		<li><a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
-			<div class="attention-block">
-				<span style="font-size: 24px">{{getTextsCount(project)}}</span><br />
-				<span style=""> texts to check</span>
-			</div>
-		</a></li>
-		<li><div class="name-with-viewcount">
-			<a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
-				<span class="name">{{project.projectname}}</span>
-			</a>
-			<br />
-			<span class="viewcount">{{getViewsCount(project)}} views</span>
-		</div></li>
-		<li><a href="#">{{getUnreadAnswers(project)}} unread answers</a></li>
-		<li><a href="#">{{getUnreadComments(project)}} unread comments</a></li>
-	</ul>
+<div listview hide-if-empty="true" search="queryProjectsForUser()" items="projects" visible-items="visibleProjects" select="">
+	<form class="control-bar form-inline">
+		<button class="btn" ng-click="removeProject()"><i class="icon-remove"></i>Remove Projects</button>
+	</form>
 	<hr />
-</div>
+	<div ng-repeat="project in visibleProjects" class="details-row">
+		<ul class="inline" ng-class="{active: isSelected(project)}">
+			<li><input type="checkbox" ng-checked="isSelected(project)" ng-click="updateSelection($event, project)" /></li>
+			<li><a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
+				<div class="attention-block">
+					<span style="font-size: 24px">{{getTextsCount(project)}}</span><br />
+					<span style=""> texts to check</span>
+				</div>
+			</a></li>
+			<li><div class="name-with-viewcount">
+				<a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
+					<span class="name">{{project.projectname}}</span>
+				</a>
+				<br />
+				<span class="viewcount">{{getViewsCount(project)}} views</span>
+			</div></li>
+			<li><a href="#">{{getUnreadAnswers(project)}} unread answers</a></li>
+			<li><a href="#">{{getUnreadComments(project)}} unread comments</a></li>
+		</ul>
+		<hr />
+	</div>
 </div>
