--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -1,39 +1,54 @@
 <h2>{{question.title}}</h2>
 <div id="text" class="span5">
-To Sherlock Holmes she is always the woman. I have seldom heard him mention her under any other name. In his eyes she eclipses and predominates the whole of her sex. It was not that he felt any emotion akin to love for Irene Adler. All emotions, and that one particularly, were abhorrent to his cold, precise but admirably balanced mind. He was, I take it, the most perfect reasoning and observing machine that the world has seen, but as a lover he would have placed himself in a false position. He never spoke of the softer passions, save with a gibe and a sneer. They were admirable things for the observer -- excellent for drawing the veil from men's motives and actions. But for the trained reasoner to admit such intrusions into his own delicate and finely adjusted temperament was to introduce a distracting factor which might throw a doubt upon all his mental results. Grit in a sensitive instrument, or a crack in one of his own high-power lenses, would not be more disturbing than a strong emotion in a nature such as his. And yet there was but one woman to him, and that woman was the late Irene Adler, of dubious and questionable memory.
-To Sherlock Holmes she is always the woman. I have seldom heard him mention her under any other name. In his eyes she eclipses and predominates the whole of her sex. It was not that he felt any emotion akin to love for Irene Adler. All emotions, and that one particularly, were abhorrent to his cold, precise but admirably balanced mind. He was, I take it, the most perfect reasoning and observing machine that the world has seen, but as a lover he would have placed himself in a false position. He never spoke of the softer passions, save with a gibe and a sneer. They were admirable things for the observer -- excellent for drawing the veil from men's motives and actions. But for the trained reasoner to admit such intrusions into his own delicate and finely adjusted temperament was to introduce a distracting factor which might throw a doubt upon all his mental results. Grit in a sensitive instrument, or a crack in one of his own high-power lenses, would not be more disturbing than a strong emotion in a nature such as his. And yet there was but one woman to him, and that woman was the late Irene Adler, of dubious and questionable memory.
+	{{text.content}}
 </div>
 <div id="comments" class="span6">
 	<div class="question">
 	<div>
-	The question gets displayed here {{question.content}}
+	{{question.content}}
 	</div>
 	</div>
 	<table>
 	<tr ng-repeat="answer in answers">
-	<td>
-	<div class="vote" style="display:inline-block;">
-		<a><i class="icon-caret-up" /></a>
-		<span>{{answer.score}}</span>
-		<a><i class="icon-caret-down" /></a>
-	</div>
-	</td><td>
-		<div class="answer">
-		This is an answer: {{answer.content}}
-		<div class="by">
-		<img src="{{answer.avatarRef}}" width="32" height="32" /><div>answered {{answer.date}}<br/>by {{answer.by}}</div>
-		</div>
-		</div>
-		<table class="comments">
-		<tr ng-repeat="comment in answer.comments">
-		<td></td>
-		<td>This is the comment: {{comment.content}}</td>
-		</tr>
-		</table>
-	</td>
+		<td>
+			<div class="vote" style="display:inline-block;">
+				<a><i class="icon-caret-up" /></a>
+				<span>{{answer.score}}</span>
+				<a><i class="icon-caret-down" /></a>
+			</div>
+		</td>
+		<td>
+			<div class="answer">
+				This is an answer: {{answer.content}}
+				<div class="by">
+					<img src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated}}<br/>by {{answer.userRef.username}}</div>
+				</div>
+			</div>
+			<table class="comments">
+				<tr ng-repeat="comment in answer.comments">
+					<td></td>
+					<td>{{comment.content}} - {{comment.userRef.username}} - {{comment.dateCreated}}</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>
+						<a ngclick="$(this).next('div').slideToggle()">Comment on this answer</a>
+						<form ng-submit="submitComment(); $(this).slideToggle()">
+							<textarea name="comment" class="jqte"></textarea>
+							<button type="submit">Comment</button>
+						</form>
+					</td>
+				</tr>
+			</table>
+		</td>
 	</tr>
 	</table>
+	<div ngshow="answers.length > 0">
+		There are no answers yet for this question. You could be the first one to reply!
+	</div>
 	Add your own answer:
-	<div id="commentInput" class="jqte"></div>
-	<button>Post</button>
+	<form ng-submit="submitAnswer()">
+		<textarea name="answer" class="jqte"></textarea>
+		<button type="submit">Post</button>
+	</form>
 </div>
