Minor fixes / renaming to get question page to work.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -5,7 +5,7 @@
 <div id="comments" class="span6">
 	<div class="question">
 	<div>
-	{{question.content}}
+	{{question.description}}
 	</div>
 	</div>
 	<table>
