QuestionModel minor fixes. MongoDecoder now decodes null dates.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -9,7 +9,7 @@
 	</div>
 	</div>
 	<table>
-	<tr ng-repeat="answer in answers">
+	<tr ng-repeat="(answerId, answer) in question.answers">
 		<td>
 			<div class="vote" style="display:inline-block;">
 				<a><i class="icon-caret-up" /></a>
