--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -31,11 +31,11 @@
 				<tr>
 					<td></td>
 					<td>
-						<a ng-click="collapsed = !collapsed" class="btn btn-link">Reply</a>
+						<a ng-click="collapsed = !collapsed" class="btn btn-link">add comment</a>
 						<div collapse="!collapsed">
 						<form ng-submit="submitComment(answer.id); $(this).slideToggle()">
 							<textarea ng-model="newComment.content"></textarea><br/>
-							<button type="submit" class="btn btn-small">Comment</button>
+							<button type="submit" class="btn btn-small">Add Comment</button>
 						</form>
 						</div>
 					</td>
@@ -50,6 +50,6 @@
 	Add your own answer:
 	<form ng-submit="submitAnswer()">
 		<textarea ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
-		<button type="submit" class="btn">Post</button>
+		<button type="submit" class="btn">Answer Question</button>
 	</form>
 </div>
