Remove "N views" from projects/texts/questions
Tracking how many times a particular project/text/question has been
viewed turns out not to be necessary here: our users aren't likely
to be interested in that information, and it adds unneeded complexity
to the interface and to the implementation.

"Perfection is achieved, not when there is nothing more to add, but when
there is nothing left to take away." - Antoine de Saint-Exupéry

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -79,17 +79,8 @@ div.listview div.attention-block .subtitle {
 	font-size: 1.0em;
 }
 
-div.name-with-viewcount {
-	text-align: center;
-	padding: 10px;
-}
-
-div.name-with-viewcount span.name {
+span.larger-text {
 	font-size: 1.2em;
-}
-
-div.name-with-viewcount span.viewcount {
-	font-size: 0.8em;
 }
 
 /* Control bar for use at top of listview */
