--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -22,13 +22,11 @@
 					<span style=""> texts to check</span>
 				</div>
 			</a></li>
-			<li><div class="name-with-viewcount">
+			<li>
 				<a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
-					<span class="name">{{project.projectname}}</span>
+					<span class="larger-text">{{project.projectname}}</span>
 				</a>
-				<br />
-				<span class="viewcount">{{getViewsCount(project)}} views</span>
-			</div></li>
+			</li>
 			<li><a href="#">{{getUnreadAnswers(project)}} unread answers</a></li>
 			<li><a href="#">{{getUnreadComments(project)}} unread comments</a></li>
 		</ul>
