--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -28,13 +28,11 @@
 				<span class="subtitle">answers</span>
 			</div>
 		</a></li>
-		<li><div class="name-with-viewcount">
+		<li>
 			<a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.title|urlencode}}/{{question.id}}">
-				<span class="name">{{question.title}}</span>
+				<span class="larger-text">{{question.title}}</span>
 			</a>
-			<br />
-			<span class="viewcount">{{getViewsCount(question)}} views</span>
-		</div></li>
+		</li>
 		<li><a href="#">{{getUnreadAnswers(question)}} unread answers</a></li>
 		<li><a href="#">{{getUnreadComments(question)}} unread comments</a></li>
 	</ul>
