Hide "there are no answers" text as appropriate
Since the question.answers object changed from being an array to a
Javascript object (keyed by the Mongo ID of each answer), using
answers.length no longer works. Instead, we'll need to use the
Object.keys(my_object).length approach to count answers.


Former-commit-id: b1e9af037872a1ba98de827999e36f4932966271

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -47,7 +47,7 @@
 		</td>
 	</tr>
 	</table>
-	<div ngshow="answers.length == 0">
+	<div ng-show="question.answerCount == 0">
 		There are no answers yet for this question. You could be the first one to reply!
 	</div>
 	Add your own answer:
