--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -23,7 +23,12 @@
 					<img ng-src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated | date:mediumDate}}<br/>by {{answer.userRef.username}}</div>
 				</div>
 				<div>
-				<a ngclass="btn-link">edit</a>|<a ng-click="answerDelete(answerId)" class="btn-link">delete</a>
+				<a class="btn-link" ng-click="showAnswerEditor(answerId)">edit</a>|<a ng-click="answerDelete(answerId)" class="btn-link">delete</a>
+				<ng-switch on="answerEditorVisible(answerId)">
+				<div ng-submit="editAnswer()" ng-switch-when="true">
+					Placeholder for the "edit your answer" form.
+				</div>
+				</ng-switch>
 				</div>
 			</div>
 			<table class="comments">
