Add answer editing.
Everything appears to work now. There's a minor bug where if user A
creates an answer and then user B edits it later, the answer is seen
as "owned" (created) by user B after the edit goes through. But that's
a separate issue, to fix later. The important thing for now is that
editing works.

Fixes #35.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -25,9 +25,10 @@
 				<div>
 				<a class="btn-link" ng-click="showAnswerEditor(answerId)">edit</a>|<a ng-click="answerDelete(answerId)" class="btn-link">delete</a>
 				<ng-switch on="answerEditorVisible(answerId)">
-				<div ng-submit="editAnswer()" ng-switch-when="true">
-					Placeholder for the "edit your answer" form.
-				</div>
+				<form ng-submit="editAnswer(editedAnswer)" ng-switch-when="true">
+					<textarea ng-model="editedAnswer.content" pui-jqte="jqteOptions"></textarea>
+					<button type="submit" class="btn">Save</button>
+				</form>
 				</ng-switch>
 				</div>
 			</div>
