--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -742,3 +742,39 @@ div#comments table.comments td {
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee;
 }
+
+.activity-date {
+	font-size:12px;
+}
+
+.activity-icon {
+	text-align:center;
+}
+
+.activity-content i.icon-quote-left {
+	font-size: 12px;
+	margin-left:5px;
+	position:relative;
+	top: -5px;
+}
+
+ .activity-content i.icon-quote-right {
+	font-size: 12px;
+	position:relative;
+	margin-right: 5px;
+	top: -5px;
+}
+
+.activity-content p {
+	margin-top:10px;
+}
+
+.activity-content hr {
+	margin: 5px 0 5px 0;
+}
+
+.activity-content .indented {
+	margin-left:20px;
+}
+
+
