WIP on comments: Adding comments works, just once
Adding the first comment for any given answer works. Adding the second
comment fails. But this is progress over what we had before, so I'll
check it in, then start working on making second (and subsequent)
comments work as well.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -42,7 +42,7 @@
 					<td>
 						<a ng-click="collapsed = !collapsed" class="btn btn-link">add comment</a>
 						<div collapse="!collapsed">
-						<form ng-submit="submitComment(answer.id); $(this).slideToggle()">
+						<form ng-submit="submitComment(answer); $(this).slideToggle()">
 							<textarea ng-model="newComment.content"></textarea><br/>
 							<button type="submit" class="btn btn-small">Add Comment</button>
 						</form>
