breadcrumbs in sfchecks now work without names in the URL

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -1,8 +1,8 @@
-<h2 style="font-weight:normal">Texts for {{projectName}}</h2>
+<h2 style="font-weight:normal">Texts for {{project.name}}</h2>
 <form ng-show="rights.showControlBar" class="control-bar form-inline">
 	<button ng-show="rights.deleteOther" class="btn" ng-click="removeTexts()"><i class="icon-remove"></i>Remove Texts</button>
 	<button ng-show="rights.create" class="btn" ng-click="newTextCollapsed = !newTextCollapsed"><i class="icon-plus"></i>Add New Text</button>
-	<a ng-show="rights.editOther" class="btn" href="#/project/{{projectName|urlencode}}/{{projectId}}/settings"><i class="icon-cog"></i>Settings</a>
+	<a ng-show="rights.editOther" class="btn" href="{{project.url}}/settings"><i class="icon-cog"></i>Settings</a>
 </form>
 <div class="new-item" collapse="newTextCollapsed">
 	<form class="well">
@@ -21,14 +21,14 @@
 <div ng-repeat="text in visibleTexts" class="details-row">
 	<ul class="inline" ng-class="{active: isSelected(text)}">
 		<li ng-show="rights.deleteOther" ><input type="checkbox" ng-checked="isSelected(text)" ng-click="updateSelection($event, text)" /></li>
-		<li><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{text.title|urlencode}}/{{text.id}}">
+		<li><a href="{{text.url}}">
 			<div class="attention-block">
 				<span class="count">{{getQuestionCount(text)}}</span><br />
 				<span class="subtitle">questions</span>
 			</div>
 		</a></li>
 		<li>
-			<a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{text.title|urlencode}}/{{text.id}}">
+			<a href="{{text.url}}">
 				<span class="larger-text">{{text.title}}</span>
 			</a>
 		</li>
