WIP on commments: comments now mostly work.
Comments can now be added repeatedly, rather than only once per
answer. But the code that's supposed to be adding them to the DOM
doesn't seem to be updating. I suspect that the ng-repeat will
need to be updated by hand, but I don't yet know how to do that.
That will be for the next work-in-progress commit.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -18,7 +18,9 @@
 			</div>
 		</td>
 		<td>
-			<div class="answer">{{answer.content}}
+			<div class="answer"><!--<b>DEBUG:</b>answerId = {{answerId}}, answer.id = {{answer.id}}<br/>-->
+				<!--<b>DEBUG:</b>answer = {{answer}}<br/>-->
+				{{answer.content}}
 				<div class="by">
 					<img ng-src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated | date:mediumDate}}<br/>by {{answer.userRef.username}}</div>
 				</div>
@@ -42,7 +44,7 @@
 					<td>
 						<a ng-click="collapsed = !collapsed" class="btn btn-link">add comment</a>
 						<div collapse="!collapsed">
-						<form ng-submit="submitComment(answer); $(this).slideToggle()">
+						<form ng-submit="submitComment(answerId, answer); $(this).slideToggle()">
 							<textarea ng-model="newComment.content"></textarea><br/>
 							<button type="submit" class="btn btn-small">Add Comment</button>
 						</form>
