--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -1,4 +1,4 @@
-<h2 style="font-weight:normal">Settings for {{projectName}}</h2>
+<h2 style="font-weight:normal">Settings for {{project.name}}</h2>
 <tabset>
 	<tab heading="Users">
 		<div ng-controller="ProjectUsersCtrl">
