--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -2,9 +2,9 @@
 <tabset>
 	<tab heading="Users">
 		<div ng-controller="ProjectUsersCtrl">
-		<form class="control-bar form-inline">
-			<button class="btn" ng-click="removeProjectUsers()"><i class="icon-remove"></i>Remove Users</button>
-			<button class="btn" ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>Add New User</button>
+		<form ng-show="rights.showControlBar" class="control-bar form-inline">
+			<button ng-show="rights.deleteOther" class="btn" ng-click="removeProjectUsers()"><i class="icon-remove"></i>Remove Users</button>
+			<button ng-show="rights.create" class="btn" ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>Add New User</button>
 		</form>
 		<div class="new-item" collapse="!newUserCollapsed">
 			<form class="well form-inline">
@@ -33,7 +33,7 @@
 			</thead>
 			<tbody>
 			<tr ng-repeat="user in visibleProjectUsers" ng-class="{active: isSelected(user)}" >
-				<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(user)" ng-click="updateSelection($event, user)" /></td>
+				<td width="16px" align="center"><input ng-show="rights.deleteOther" type="checkbox" ng-checked="isSelected(user)" ng-click="updateSelection($event, user)" /></td>
 				<td>{{user.username}}</td>
 				<td>{{user.name}}</td>
 				<td>&nbsp;</td>
