WIP: Add project editing (renaming only)
Note that the database name is based on the project name, so this
alone will not be enough; the Mongo database will have to be
renamed also since its name is "sf_lowercaseprojectname". And as
MongoDB does not have a "rename database" feature, that means the
database rename will have to be done by the "copy database to new
name, wait for copy to finish, delete old database" method. That
will be in the next commit.

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -44,15 +44,13 @@
 		</div>
 		
 	</tab>
-	<!-- 
 	<tab heading="Project">
-	<form class="well">
+	<form class="well" ng-submit="updateProjectName(editedName)">
 	<fieldset>
 		<label>Project Name</label>
-		<input type="text" placeholder="(project name)" ng-model="user.username"/>
+		<input type="text" placeholder="(project name)" ng-model="editedName"/>
 	</fieldset>
-	<button type="submit" class="btn">Save</button>
+	<button type="submit" class="btn">Update</button>
 	</form>
 	</tab>
-	 -->
 </tabset>
