--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -1,9 +1,9 @@
-<h2 style="font-weight:normal">Settings for {{textName}}</h2>
+<h2 style="font-weight:normal">Settings for {{textTitle}}</h2>
 <tabset>
 	<tab heading="Text">
-		<form class="well form-inline">
-		<input type="text" ng-model="projectName" placeholder="Project Name"/>
-		<button type="submit" class="btn" ng-click="addProject(); newProjectCollapsed = true"><i class="icon-plus"></i>Add Project</button>
+		<form class="well form-inline" ng-submit="updateTextName(editedTitle)">
+		<input type="text" ng-model="editedTitle" placeholder="Text Name"/>
+		<button type="submit" class="btn"><i class="icon-pencil"></i>Rename Text</button>
 		</form>
 	</tab>
 </tabset>
