Make listview items per page select box less wide.
Former-commit-id: 9e1de45aba787c5da58c52b30902287e3b441243

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -63,6 +63,10 @@ div.listview .active {
 	background-color: #ffc;
 }
 
+div.listview div.pagination select {
+	width: 70px;
+}
+
 /* Listview for projects, questions, answers views */
 div.listview div.attention-block {
 	text-align: center;
