Simplify typeahead API quite a bit
Instead of using & binding for the search and query functions, which
leads to needing to call them with a slightly complicated process (we
have to pass parameters using a Javascript object, and the HTML code
that uses the directive needs to know what name we gave the properties
of that Javascript object), using a = binding for these functions means
we can call them inside the directive code just like normal Javascript
functions, the HTML code doesn't care what names the parameters have,
and the API is just generally improved all around.

To change existing code to use the new API, replace 'search="foo(term)"'
and 'select="bar(item)"' with 'search="foo"' and 'select="bar"' in HTML.


Former-commit-id: 72f5e0c9e36a82220cb10f7717b052e755128d51

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -7,7 +7,7 @@
 		</form>
 		<div class="new-item" collapse="!newUserCollapsed">
 			<form class="well form-inline">
-			<typeahead class="typeahead" items="user" term="typeahead.userName" search="queryUser(typeahead.userName)" select="selectUser(item)">
+			<typeahead class="typeahead" items="user" term="typeahead.userName" search="queryUser" select="selectUser">
 				<ul>
 					<li typeahead-item="user" ng-repeat="user in users" class="typeahead-item">
 						<img width="32px" ng-src="{{imageSource(user.avatarRef)}}" class="left">
