Change "Settings" btn to "Update" for project/text
Fixes #51


Former-commit-id: 726a2b10fa49538f63c94679a2cec63277917bcd

--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -1,4 +1,4 @@
-<h2 style="font-weight:normal">Settings for {{textTitle}}</h2>
+<h2 style="font-weight:normal">Update {{textTitle}}</h2>
 <div ng-switch on="rights.editOther">
 <tabset ng-switch-when="true">
 	<tab heading="Edit Text">
