Replace small image logo in header with text logo
Also line up text logo so that menu no longer moves left or right,
not even by a single pixel, when switching between static and
dynamic pages. (The menu does move about 10-15 pixels to the right
as the dynamic page is loading, but settles back into the correct
position once the page is fully loaded.)


Former-commit-id: c995a79826ca3ac1ad29816a8cb6f2441e1c976c

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -176,6 +176,11 @@ div.darkTextLogo {
 	background: transparent url(../images/sf_sprite.png) no-repeat 0 -22px;
 }
 
+div.darkTextLogo.text-logo-top {
+	margin: 11px 10px 0px -176px;
+	/* Should this use position: absolute instead? */
+}
+
 div#promotion {
 	position: relative;
 	width: 958px;
