--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -1,5 +1,5 @@
 <h2>{{question.title}}</h2>
-<div id="text" class="span5" ng-bind-html-unsafe="text.content">
+<div id="text" class="span5" selection remote-var="selectedText" content="text.content">
 </div>
 <div id="comments" class="span6">
 	<div class="question">
